# serializer version: 1
# name: test_sensor_states[platforms0][sensor.freezer-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'superfreezing',
        'autocleaning',
        'supercooling_superfreezing',
        'rinse_hold',
        'waiting_to_start',
        'service',
        'program_interrupted',
        'programmed',
        'off',
        'in_use',
        'on',
        'program_ended',
        'supercooling',
        'not_connected',
        'idle',
        'pause',
        'failure',
        'superheating',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.freezer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': 'mdi:fridge-industrial-outline',
    'original_name': None,
    'platform': 'miele',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'status',
    'unique_id': 'Dummy_Appliance_1-state_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_states[platforms0][sensor.freezer-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Freezer',
      'icon': 'mdi:fridge-industrial-outline',
      'options': list([
        'superfreezing',
        'autocleaning',
        'supercooling_superfreezing',
        'rinse_hold',
        'waiting_to_start',
        'service',
        'program_interrupted',
        'programmed',
        'off',
        'in_use',
        'on',
        'program_ended',
        'supercooling',
        'not_connected',
        'idle',
        'pause',
        'failure',
        'superheating',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.freezer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'in_use',
  })
# ---
# name: test_sensor_states[platforms0][sensor.freezer_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.freezer_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Temperature',
    'platform': 'miele',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'Dummy_Appliance_1-state_temperature_1',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_sensor_states[platforms0][sensor.freezer_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'Freezer Temperature',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.freezer_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-18.0',
  })
# ---
# name: test_sensor_states[platforms0][sensor.hood-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'superfreezing',
        'autocleaning',
        'supercooling_superfreezing',
        'rinse_hold',
        'waiting_to_start',
        'service',
        'program_interrupted',
        'programmed',
        'off',
        'in_use',
        'on',
        'program_ended',
        'supercooling',
        'not_connected',
        'idle',
        'pause',
        'failure',
        'superheating',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.hood',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': 'mdi:turbine',
    'original_name': None,
    'platform': 'miele',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'status',
    'unique_id': 'DummyAppliance_18-state_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_states[platforms0][sensor.hood-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Hood',
      'icon': 'mdi:turbine',
      'options': list([
        'superfreezing',
        'autocleaning',
        'supercooling_superfreezing',
        'rinse_hold',
        'waiting_to_start',
        'service',
        'program_interrupted',
        'programmed',
        'off',
        'in_use',
        'on',
        'program_ended',
        'supercooling',
        'not_connected',
        'idle',
        'pause',
        'failure',
        'superheating',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hood',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_sensor_states[platforms0][sensor.refrigerator-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'superfreezing',
        'autocleaning',
        'supercooling_superfreezing',
        'rinse_hold',
        'waiting_to_start',
        'service',
        'program_interrupted',
        'programmed',
        'off',
        'in_use',
        'on',
        'program_ended',
        'supercooling',
        'not_connected',
        'idle',
        'pause',
        'failure',
        'superheating',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.refrigerator',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': 'mdi:fridge-industrial-outline',
    'original_name': None,
    'platform': 'miele',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'status',
    'unique_id': 'Dummy_Appliance_2-state_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_states[platforms0][sensor.refrigerator-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Refrigerator',
      'icon': 'mdi:fridge-industrial-outline',
      'options': list([
        'superfreezing',
        'autocleaning',
        'supercooling_superfreezing',
        'rinse_hold',
        'waiting_to_start',
        'service',
        'program_interrupted',
        'programmed',
        'off',
        'in_use',
        'on',
        'program_ended',
        'supercooling',
        'not_connected',
        'idle',
        'pause',
        'failure',
        'superheating',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.refrigerator',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'in_use',
  })
# ---
# name: test_sensor_states[platforms0][sensor.refrigerator_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.refrigerator_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Temperature',
    'platform': 'miele',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'Dummy_Appliance_2-state_temperature_1',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_sensor_states[platforms0][sensor.refrigerator_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'Refrigerator Temperature',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.refrigerator_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4.0',
  })
# ---
# name: test_sensor_states[platforms0][sensor.washing_machine-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'superfreezing',
        'autocleaning',
        'supercooling_superfreezing',
        'rinse_hold',
        'waiting_to_start',
        'service',
        'program_interrupted',
        'programmed',
        'off',
        'in_use',
        'on',
        'program_ended',
        'supercooling',
        'not_connected',
        'idle',
        'pause',
        'failure',
        'superheating',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.washing_machine',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': 'mdi:washing-machine',
    'original_name': None,
    'platform': 'miele',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'status',
    'unique_id': 'Dummy_Appliance_3-state_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_states[platforms0][sensor.washing_machine-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Washing machine',
      'icon': 'mdi:washing-machine',
      'options': list([
        'superfreezing',
        'autocleaning',
        'supercooling_superfreezing',
        'rinse_hold',
        'waiting_to_start',
        'service',
        'program_interrupted',
        'programmed',
        'off',
        'in_use',
        'on',
        'program_ended',
        'supercooling',
        'not_connected',
        'idle',
        'pause',
        'failure',
        'superheating',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.washing_machine',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_sensor_states[platforms0][sensor.washing_machine_energy_consumption-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.washing_machine_energy_consumption',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
    'original_icon': None,
    'original_name': 'Energy consumption',
    'platform': 'miele',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'energy_consumption',
    'unique_id': 'Dummy_Appliance_3-current_energy_consumption',
    'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
  })
# ---
# name: test_sensor_states[platforms0][sensor.washing_machine_energy_consumption-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Washing machine Energy consumption',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.washing_machine_energy_consumption',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_sensor_states[platforms0][sensor.washing_machine_program-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'starch',
        'down_duvets',
        'warm_air',
        'shirts',
        'cool_air',
        'first_wash',
        'sportswear',
        'down_filled_items',
        'quick_power_wash',
        'cottons_eco',
        'rinse',
        'steam_care',
        'minimum_iron',
        'pillows',
        'drain_spin',
        'no_program',
        'eco_40_60',
        'proofing',
        'dark_garments',
        'cottons',
        'denim',
        'automatic_plus',
        'cottons_hygiene',
        'curtains',
        'delicates',
        'trainers',
        'clean_machine',
        'express_20',
        'freshen_up',
        'separate_rinse_starch',
        'woollens',
        'rinse_out_lint',
        'silks',
        'outerwear',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.washing_machine_program',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Program',
    'platform': 'miele',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'program_id',
    'unique_id': 'Dummy_Appliance_3-state_program_id',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_states[platforms0][sensor.washing_machine_program-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Washing machine Program',
      'options': list([
        'starch',
        'down_duvets',
        'warm_air',
        'shirts',
        'cool_air',
        'first_wash',
        'sportswear',
        'down_filled_items',
        'quick_power_wash',
        'cottons_eco',
        'rinse',
        'steam_care',
        'minimum_iron',
        'pillows',
        'drain_spin',
        'no_program',
        'eco_40_60',
        'proofing',
        'dark_garments',
        'cottons',
        'denim',
        'automatic_plus',
        'cottons_hygiene',
        'curtains',
        'delicates',
        'trainers',
        'clean_machine',
        'express_20',
        'freshen_up',
        'separate_rinse_starch',
        'woollens',
        'rinse_out_lint',
        'silks',
        'outerwear',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.washing_machine_program',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'no_program',
  })
# ---
# name: test_sensor_states[platforms0][sensor.washing_machine_program_phase-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'not_running',
        'disinfecting',
        'drying',
        'cleaning',
        'rinse',
        'soak',
        'freshen_up_and_moisten',
        'spin',
        'steam_smoothing',
        'hygiene',
        'main_wash',
        'cooling_down',
        'drain',
        'pre_wash',
        'finished',
        'anti_crease',
        'rinse_hold',
        'starch_stop',
        'venting',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.washing_machine_program_phase',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Program phase',
    'platform': 'miele',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'program_phase',
    'unique_id': 'Dummy_Appliance_3-state_program_phase',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_states[platforms0][sensor.washing_machine_program_phase-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Washing machine Program phase',
      'options': list([
        'not_running',
        'disinfecting',
        'drying',
        'cleaning',
        'rinse',
        'soak',
        'freshen_up_and_moisten',
        'spin',
        'steam_smoothing',
        'hygiene',
        'main_wash',
        'cooling_down',
        'drain',
        'pre_wash',
        'finished',
        'anti_crease',
        'rinse_hold',
        'starch_stop',
        'venting',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.washing_machine_program_phase',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'not_running',
  })
# ---
# name: test_sensor_states[platforms0][sensor.washing_machine_program_type-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'normal_operation_mode',
        'maintenance_program',
        'automatic_program',
        'own_program',
        'cleaning_care_program',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.washing_machine_program_type',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Program type',
    'platform': 'miele',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'program_type',
    'unique_id': 'Dummy_Appliance_3-state_program_type',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_states[platforms0][sensor.washing_machine_program_type-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Washing machine Program type',
      'options': list([
        'normal_operation_mode',
        'maintenance_program',
        'automatic_program',
        'own_program',
        'cleaning_care_program',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.washing_machine_program_type',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'normal_operation_mode',
  })
# ---
# name: test_sensor_states[platforms0][sensor.washing_machine_spin_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.washing_machine_spin_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Spin speed',
    'platform': 'miele',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'spin_speed',
    'unique_id': 'Dummy_Appliance_3-state_spinning_speed',
    'unit_of_measurement': 'rpm',
  })
# ---
# name: test_sensor_states[platforms0][sensor.washing_machine_spin_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Washing machine Spin speed',
      'unit_of_measurement': 'rpm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.washing_machine_spin_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensor_states[platforms0][sensor.washing_machine_water_consumption-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.washing_machine_water_consumption',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Water consumption',
    'platform': 'miele',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'water_consumption',
    'unique_id': 'Dummy_Appliance_3-current_water_consumption',
    'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
  })
# ---
# name: test_sensor_states[platforms0][sensor.washing_machine_water_consumption-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'water',
      'friendly_name': 'Washing machine Water consumption',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.washing_machine_water_consumption',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
